--- a/public/views/partials/textCounter.handlebars
+++ b/public/views/partials/textCounter.handlebars
@@ -1,13 +1,16 @@
 <div class="card max-w-2xl mx-auto">
     <h1>Text counter</h1>
 
-    <textarea rows="4" class="block rounded-t-lg px-2.5 py-2.5 w-full text-sm text-gray-900 bg-gray-50 dark:bg-gray-700 border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-indigo-500 focus:outline-none focus:ring-0 focus:border-indigo-600 mt-2" placeholder="Text to count" autocomplete="off" id="contentToCount"></textarea>
+    <textarea rows="4" class="block rounded-t-lg px-2.5 py-2.5 w-full text-sm text-gray-900 bg-gray-50 dark:bg-gray-700 border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-indigo-500 focus:outline-none focus:ring-0 focus:border-indigo-600 mt-4" placeholder="Text to count" autocomplete="off" id="contentToCount"></textarea>
 
-    <div class="w-full flex flex-row flex-wrap justify-between">
-        <div class="pt-4"><div class="bg-neutral-100 dark:bg-neutral-800 rounded p-4 w-full text-center"><h1 class="text-3xl font-bold tracking-tight dark:text-gray-300 text-gray-500" id="sentencesCount">0</h1><p class="text-xl font-semibold tracking-tight dark:text-gray-300 text-gray-500">Sentences</p></div></div>
-        <div class="p-4 pb-0"><div class="bg-neutral-100 dark:bg-neutral-800 rounded p-4 w-full text-center"><h1 class="text-3xl font-bold tracking-tight dark:text-gray-300 text-gray-500" id="wordsCount">0</h1><p class="text-xl font-semibold tracking-tight dark:text-gray-300 text-gray-500">Words</p></div></div>
-        <div class="p-4 pl-0 pb-"><div class="bg-neutral-100 dark:bg-neutral-800 rounded p-4 w-full text-center"><h1 class="text-3xl font-bold tracking-tight dark:text-gray-300 text-gray-500" id="lettersCount">0</h1><p class="text-xl font-semibold tracking-tight dark:text-gray-300 text-gray-500">Letters</p></div></div>
-        <div class="pt-4"><div class="bg-neutral-100 dark:bg-neutral-800 rounded p-4 w-full text-center"><h1 class="text-3xl font-bold tracking-tight dark:text-gray-300 text-gray-500" id="charactersCount">0</h1><p class="text-xl font-semibold tracking-tight dark:text-gray-300 text-gray-500">Characters</p></div></div>
+    <div class="w-full md:columns-4 columns-2 mt-4 gap-4">
+        <div class="bg-gray-100 dark:bg-gray-900 rounded p-4 text-center"><h1 class="text-3xl font-bold tracking-tight dark:text-gray-300 text-gray-500" id="sentencesCount">0</h1><p class="text-xl font-semibold tracking-tight dark:text-gray-300 text-gray-500">Sentences</p></div>
+
+        <div class="bg-gray-100 dark:bg-gray-900 rounded p-4 text-center mt-4 md:mt-0"><h1 class="text-3xl font-bold tracking-tight dark:text-gray-300 text-gray-500" id="wordsCount">0</h1><p class="text-xl font-semibold tracking-tight dark:text-gray-300 text-gray-500">Words</p></div>
+
+        <div class="bg-gray-100 dark:bg-gray-900 rounded p-4 text-center"><h1 class="text-3xl font-bold tracking-tight dark:text-gray-300 text-gray-500" id="lettersCount">0</h1><p class="text-xl font-semibold tracking-tight dark:text-gray-300 text-gray-500">Letters</p></div>
+
+        <div class="bg-gray-100 dark:bg-gray-900 rounded p-4 text-center mt-4 md:mt-0"><h1 class="text-3xl font-bold tracking-tight dark:text-gray-300 text-gray-500" id="charactersCount">0</h1><p class="text-xl font-semibold tracking-tight dark:text-gray-300 text-gray-500">Characters</p></div>
     </div>
 </div>
 
