--- a/public/src/main.css
+++ b/public/src/main.css
@@ -27,5 +27,5 @@ p {
 }
 
 .card {
-    @apply p-10 bg-white border border-gray-200 rounded-lg shadow-sm dark:border-gray-700 sm:p-6 dark:bg-gray-800
+    @apply p-10 bg-white dark:bg-gray-800 border border-gray-200 rounded-lg shadow-sm dark:border-gray-700 sm:p-6
 }
