--- a/public/views/partials/bionicReadingConverter.handlebars
+++ b/public/views/partials/bionicReadingConverter.handlebars
@@ -1,7 +1,8 @@
 <div class="card max-w-2xl mx-auto">
     <h1>Bionic reading converter</h1>
 
-    <select class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-indigo-500 focus:border-indigo-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-indigo-500 dark:focus:border-indigo-500 outline-none mt-4" id="fixationInput" onchange="convert()">
+    <p class="mt-4">Fixation</p>
+    <select class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-indigo-500 focus:border-indigo-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-indigo-500 dark:focus:border-indigo-500 outline-none" id="fixationInput" onchange="convert()">
         <option value="5">5</option>
         <option value="4">4</option>
         <option value="3">3</option>
@@ -9,9 +10,9 @@
         <option value="1">1</option>
     </select>
 
-    <textarea rows="10" class="block rounded-t-lg px-2.5 py-2.5 w-full text-sm text-gray-900 bg-gray-50 dark:bg-gray-700 border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-indigo-500 focus:outline-none focus:ring-0 focus:border-indigo-600 mt-4" placeholder="Content to convert" autocomplete="off" id="contentToConvert">Bionic Reading is a new method facilitating the reading process by guiding the eyes trough text with artificial fixation points. As a result, the reader is only focusing on the highlighted initial letters and lets the brain center complete the word. In a digital world dominated by shallow forms of reading, Bionic Reading aims to encourage a more in-depth reading and understanding of written content.</textarea>
+    <textarea rows="8" class="block rounded-t-lg px-2.5 py-2.5 w-full text-md text-gray-900 bg-gray-50 dark:bg-gray-700 border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-indigo-500 focus:outline-none focus:ring-0 focus:border-indigo-600 mt-4" placeholder="Content to convert" autocomplete="off" id="contentToConvert">Bionic Reading is a new method facilitating the reading process by guiding the eyes trough text with artificial fixation points. As a result, the reader is only focusing on the highlighted initial letters and lets the brain center complete the word. In a digital world dominated by shallow forms of reading, Bionic Reading aims to encourage a more in-depth reading and understanding of written content.</textarea>
 
-    <div class="block rounded-t-lg px-2.5 py-2.5 w-full text-sm text-gray-900 bg-gray-50 dark:bg-gray-700 border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-indigo-500 focus:outline-none focus:ring-0 focus:border-indigo-600 mt-4 h-[200px]" id="resultContent" readonly></div>
+    <div class="block rounded-t-lg px-2.5 py-2.5 w-full text-gray-900 bg-gray-50 dark:bg-gray-700 border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-indigo-500 focus:outline-none focus:ring-0 focus:border-indigo-600 mt-4 h-[222px] text-lg" id="resultContent" readonly></div>
 </div>
 
 <script>
