--- a/public/views/partials/imageAverageColorFinder.handlebars
+++ b/public/views/partials/imageAverageColorFinder.handlebars
@@ -12,7 +12,7 @@
         </label>
     </div> 
 
-    <div class="w-full aspect-video bg-gray-50 border border-gray-200 dark:border-gray-600 dark:bg-neutral-700 mt-4 rounded-lg p-4" id="imagePreview"></div>
+    <div class="w-full aspect-video bg-gray-50 dark:bg-gray-900 border border-gray-200 dark:border-gray-600 mt-4 rounded-lg p-4" id="imagePreview"></div>
 
     <div id="colors"></div>
 
@@ -49,8 +49,8 @@
     }
 
     function getAverageRGB() {
-        var blockSize = 5, // only visit every 5 pixels
-            defaultRGB = {r:0,g:0,b:0}, // for non-supporting envs
+        var blockSize = 5,
+            defaultRGB = {r:0,g:0,b:0},
             canvas = document.createElement('canvas'),
             context = canvas.getContext && canvas.getContext('2d'),
             data, width, height,
@@ -91,7 +91,7 @@
         rgb.g = Math.floor(rgb.g/count);
         rgb.b = Math.floor(rgb.b/count);
 
-        colorsDiv.innerHTML =`<div class="mt-4 flex flex-row gap-2 rounded-lg bg-gray-50 border border-gray-200 dark:border-gray-600 dark:bg-neutral-700"><div class="md:h-28 md:w-56 h-20 w-40 rounded-l-lg" style="background-color: rgb(${rgb.r}, ${rgb.g}, ${rgb.b});"></div><div class="flex flex-col justify-center"><p>${rgbToHex(rgb)}</p><p>rgb(${rgb.r}, ${rgb.g}, ${rgb.b})</p><p>hsl(${RGBToHSL(rgb)})</p></div></div>`;
+        colorsDiv.innerHTML =`<div class="mt-4 flex flex-row gap-2 rounded-lg border border-gray-200 dark:border-gray-600 bg-gray-50 dark:bg-gray-900"><div class="md:h-28 md:w-56 h-20 w-40 rounded-l-lg" style="background-color: rgb(${rgb.r}, ${rgb.g}, ${rgb.b});"></div><div class="flex flex-col justify-center"><p>${rgbToHex(rgb)}</p><p>rgb(${rgb.r}, ${rgb.g}, ${rgb.b})</p><p>hsl(${RGBToHSL(rgb)})</p></div></div>`;
     }
 
     function componentToHex(c) {
