--- a/public/views/partials/imageColorExtractor.handlebars
+++ b/public/views/partials/imageColorExtractor.handlebars
@@ -21,7 +21,7 @@
         <option value="1">1</option>
     </select>
 
-    <div class="w-full aspect-video bg-gray-50 border border-gray-200 dark:border-gray-600 dark:bg-neutral-700 mt-4 rounded-lg p-4 flex flex-col justify-center" id="imagePreview"></div>
+    <div class="w-full aspect-video border border-gray-200 dark:border-gray-600 bg-gray-50 dark:bg-gray-900 mt-4 rounded-lg p-4 flex flex-col justify-center" id="imagePreview"></div>
 
     <div id="colors"></div>
 
@@ -76,11 +76,11 @@
                 colors.forEach(color => {
                     let rgb = Object.fromEntries([["r", color[0]], ["g", color[1]], ["b", color[2]]]);
                     // Using Jquery
-                    colorsDiv.innerHTML +=`<div class="mt-4 flex flex-row gap-2 rounded-lg bg-gray-50 border border-gray-200 dark:border-gray-600 dark:bg-neutral-700"><div class="md:h-28 md:w-56 h-20 w-40 rounded-l-lg" style="background-color: rgb(${rgb.r}, ${rgb.g}, ${rgb.b});"></div><div class="flex flex-col justify-center"><p>${rgbToHex(rgb)}</p><p>rgb(${rgb.r}, ${rgb.g}, ${rgb.b})</p><p>hsl(${RGBToHSL(rgb)})</p></div></div>`;
+                    colorsDiv.innerHTML +=`<div class="mt-4 flex flex-row gap-2 rounded-lg border border-gray-200 dark:border-gray-600 dark:border-gray-600 bg-gray-50 dark:bg-gray-900"><div class="md:h-28 md:w-56 h-20 w-40 rounded-l-lg" style="background-color: rgb(${rgb.r}, ${rgb.g}, ${rgb.b});"></div><div class="flex flex-col justify-center"><p>${rgbToHex(rgb)}</p><p>rgb(${rgb.r}, ${rgb.g}, ${rgb.b})</p><p>hsl(${RGBToHSL(rgb)})</p></div></div>`;
                 });
             }else{
                 let rgb = {r: colors[0], g: colors[1], b: colors[2]};
-                colorsDiv.innerHTML +=`<div class="mt-4 flex flex-row gap-2 rounded-lg bg-gray-50 border border-gray-200 dark:border-gray-600 dark:bg-neutral-700"><div class="md:h-28 md:w-56 h-20 w-40 rounded-l-lg" style="background-color: rgb(${colors[0]}, ${colors[1]}, ${colors[2]});"></div><div class="flex flex-col justify-center"><p>${rgbToHex(rgb)}</p><p>rgb(${colors[0]}, ${colors[1]}, ${colors[2]})</p><p>hsl(${RGBToHSL(rgb)})</p></div></div>`;
+                colorsDiv.innerHTML +=`<div class="mt-4 flex flex-row gap-2 rounded-lg border border-gray-200 dark:border-gray-600 dark:border-gray-600 bg-gray-50 dark:bg-gray-900"><div class="md:h-28 md:w-56 h-20 w-40 rounded-l-lg" style="background-color: rgb(${colors[0]}, ${colors[1]}, ${colors[2]});"></div><div class="flex flex-col justify-center"><p>${rgbToHex(rgb)}</p><p>rgb(${colors[0]}, ${colors[1]}, ${colors[2]})</p><p>hsl(${RGBToHSL(rgb)})</p></div></div>`;
             }
         });
     }
